syntax = "proto3";

package auth.methods;

option go_package = "github.com/Yux77Yux/platform_backend/generated/auth";

import "auth/messages/tokens.proto";
import "user/messages/user_auth.proto";
import "common/api_response.proto";

message LoginRequest {
  user.messages.UserAuth user_auth = 1;
}

message LoginResponse {
  auth.messages.Tokens tokens = 1;
  common.ApiResponse msg = 2;
}